# WinVibe

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/winvibe-app/: Cargo.toml  tauri.conf.json
crates/winvibe-app/src/: app_state.rs  commands.rs  config_loader.rs  hud_decision.rs  ipc_error.rs  lib.rs  lifecycle_sink.rs  main.rs
crates/winvibe-app/src/audit/: cleanup.rs  mod.rs  record.rs  sink.rs
crates/winvibe-app/src/diagnostic/: cleanup.rs  mod.rs  record.rs  sink.rs
crates/winvibe-app/src/redact/: mod.rs  pipeline.rs
crates/winvibe-contract-tests/: Cargo.toml
crates/winvibe-contract-tests/tests/: error_matrix.rs  hookcli_protocol.rs  idempotency.rs
crates/winvibe-contract-tests/tests/helpers/: mod.rs  test_server.rs
crates/winvibe-core/: Cargo.toml
crates/winvibe-core/src/: clock.rs  config.rs  error.rs  lib.rs  protocol.rs  session.rs  trace.rs
crates/winvibe-core/src/approval/: fingerprint.rs  mod.rs  snapshot.rs  store.rs  types.rs
crates/winvibe-e2e/: Cargo.toml
crates/winvibe-e2e/src/: lib.rs
crates/winvibe-hook-server/: Cargo.toml
crates/winvibe-hook-server/src/: error.rs  lib.rs  runtime.rs  server.rs  sink.rs
crates/winvibe-hook-server/src/handlers/: mod.rs  poll.rs  submit.rs
crates/winvibe-hook-server/src/middleware/: auth.rs  mod.rs  origin.rs  traceparent.rs
crates/winvibe-hookcli/: Cargo.toml
crates/winvibe-hookcli/src/: config_loader.rs  exit_code.rs  http_client.rs  lib.rs  main.rs  trace_ctx.rs
crates/winvibe-hookcli/src/commands/: mod.rs  pre_tool_use.rs
docs/: PRD.md  UI-SPEC.md
docs/superpowers/specs/: 2026-04-20-mvp1-hook-server-hud-approval-design.md
scripts/: check-deps.ps1  check-tracing.ps1  check-ts-drift.ps1
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.module.css  App.test.tsx  App.tsx  main.tsx
web/src/components/ActionBar/: ActionBar.module.css  ActionBar.test.tsx  ActionBar.tsx
web/src/components/ApprovalCard/: ApprovalCard.module.css  ApprovalCard.test.tsx  ApprovalCard.tsx
web/src/components/ErrorBoundary/: ErrorBoundary.module.css  ErrorBoundary.tsx
web/src/components/StatusBadge/: StatusBadge.module.css  StatusBadge.test.tsx  StatusBadge.tsx
web/src/context/: ApprovalContext.test.tsx  ApprovalContext.tsx
web/src/hooks/: useIpc.test.ts  useIpc.ts
web/src/styles/: tokens.css
