[workspace]
resolver = "2"
members = [
    "crates/winvibe-core",
    "crates/winvibe-hook-server",
    "crates/winvibe-hookcli",
    "crates/winvibe-app",
    "crates/winvibe-contract-tests",
    "crates/winvibe-e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
ryu = "1"
itoa = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
ureq = "2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
ts-rs = { version = "10", features = ["serde-json-impl"] }
tauri = { version = "2", features = [] }
tauri-build = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
subtle = "2"
