[package]
name = "winvibe-e2e"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
winvibe-core = { path = "../winvibe-core" }
winvibe-hook-server = { path = "../winvibe-hook-server" }
winvibe-hookcli = { path = "../winvibe-hookcli" }
winvibe-app = { path = "../winvibe-app" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tempfile = "3"
