[package]
name = "winvibe-hook-server"
version.workspace = true
edition.workspace = true

[dependencies]
winvibe-core = { path = "../winvibe-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
async-trait.workspace = true
subtle.workspace = true

[dev-dependencies]
axum-test = "20"
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }
