[package]
name = "winvibe-hookcli"
version.workspace = true
edition.workspace = true

[lib]
name = "winvibe_hookcli"
path = "src/lib.rs"

[[bin]]
name = "winvibe-hookcli"
path = "src/main.rs"

[dependencies]
winvibe-core = { path = "../winvibe-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
ureq.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
